@@ -1,6 +1,6 @@
-Date: 2024-11-17
+Date: 2024-11-28
 Package: CHNOSZ
-Version: 2.1.0-22
+Version: 2.1.0-23
 Title: Thermodynamic Calculations and Diagrams for Geochemistry
 Authors@R: c(
     person("Jeffrey", "Dick", , "j3ffdick@gmail.com", role = c("aut", "cre"),
